--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "less": "^4.1.3",
-    "pug": "^3.0.2"
+    "pretty": "^2.0.0",
+    "pug": "^3.0.2",
+    "rehype-stringify": "^8.0.0",
+    "remark-parse": "^9.0.0",
+    "remark-rehype": "^8.1.0",
+    "unified": "^9.2.2"
   },
   "devDependencies": {
     "@types/less": "^3.0.3",
     "@types/node": "^18.0.1",
+    "@types/pretty": "^2.0.1",
     "@types/pug": "^2.0.6",
     "esbuild": "^0.14.48",
     "nodemon": "^2.0.18",
