--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rehype-stringify": "^8.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.1.0",
+    "toml": "^3.0.0",
     "unified": "^9.2.2"
   },
   "devDependencies": {
