--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bssg",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec './build.sh && node --enable-source-maps .'",
@@ -10,13 +10,13 @@
     "bssg": "./index.js"
   },
   "dependencies": {
+    "commander": "^9.4.0",
     "less": "^4.1.3",
     "pretty": "^2.0.0",
     "pug": "^3.0.2",
     "rehype-stringify": "^8.0.0",
     "remark-parse": "^9.0.0",
     "remark-rehype": "^8.1.0",
-    "toml": "^3.0.0",
     "unified": "^9.2.2"
   },
   "devDependencies": {
